<resources>
    <string name="app_name">PJATK-PAMO-Project</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Places</string>
    <string name="title_notifications">Map</string>


    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="country_hint">Country</string>
    <string name="city_hint">City</string>
    <string name="street_hint">Street</string>
    <string name="house_number_hint">House number</string>
    <string name="apartment_hint">Apartment</string>
    <string name="save_button_name">SAVE</string>
    <string name="delete_button_name">Delete</string>
    <string name="delete_client_dialog_message">Delete the clients?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation">Yes, delete</string>
    <string name="MainText">Aplikacja Android na zaliczenie PAMO</string>
    <string name="title_activity_client">Clients</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email clients is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_map">Map</string>

</resources>
